gallery and testimonals are done, also heading cut offs are fixed. Need to add more content to event with read more links and also do artist bio.

--- a/assets/css/rolodex.css
+++ b/assets/css/rolodex.css
@@ -93,7 +93,7 @@
   }
   
   .carousel__item-body {
-    width: 80%;
+    width: 90%;
     background-color: rgba(255,255,255, .5);
     border-radius: 8px;
     padding: 16px 20px 16px 20px;
