--- a/assets/css/slice.css
+++ b/assets/css/slice.css
@@ -1,4 +1,5 @@
 .slice {
+    padding-top: 10px;
     font-size: 4.25rem;
     line-height: 1.2;
     text-transform: uppercase;
